# tutorial-triton-inference-server

./: devenv.nix  notes  pyproject.toml  ragnarok.py
docker/pytorch/: Dockerfile
docker/triton/: Dockerfile
optim/: convert_text_encoder_2_to_onnx.py  convert_text_encoder_to_onnx.py  convert_unet_to_onnx.py  convert_vae_decoder_to_onnx.py  convert_vae_encoder_to_onnx.py
pipelines/: ensemble.py  ensemble_ragnarok.py
scripts/: move_onnx_models_to_triton.py  run_bls_pipeline.py  run_ensemble_pipeline.py  run_ensemble_pipeline_ragnarok.py
triton/models/pipeline_text_to_image/1/: model.py
triton/models/text_encoder/: config.pbtxt
triton/models/unet/: config.pbtxt
triton/models/vae_decoder/: config.pbtxt
triton/models/vae_encoder/: config.pbtxt
triton/models/vae_encoder_decoder/: config.pbtxt
utils/: constants.py
