[project]
name = "my-optimum-project"  # Can be any name
version = "0.1.0"  # Arbitrary version
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "numpy>=2.3.5",
    "onnx>=1.20.0",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "onnxruntime-tools>=1.7.0",
    "onnxscript>=0.5.6",
    "packaging>=25.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "tritonclient[all]>=2.63.0",
]

